--- a/index.html
+++ b/index.html
@@ -3532,8 +3532,8 @@
         }
 
         function showCreateWholesaleAccountMessage() {
-            const translation = translations[currentLanguage];
-            alert(translation.createWholesaleAccountMessage);
+            // Abrir el formulario de registro mayorista en una nueva ventana
+            window.open('Formsubmit-template.html', '_blank', 'width=900,height=700,scrollbars=yes,resizable=yes');
         }
 
         // Expose functions globally
