feat: implement complete wholesale registration flow with thank you page
- Configure wholesale form to redirect to thank-you.html after submission
- Adapt thank-you page specifically for Skyplay IPTV wholesale context
- Update messaging: 'Registration Received' with wholesale-specific content
- Add comprehensive next steps for wholesale clients:
  * Application review process
  * Exclusive wholesale pricing
  * Dedicated support and management panel
  * Volume discounts and business billing
- Update contact information to abarahonag@barmentech.com
- Customize WhatsApp follow-up for wholesale registration context
- Configure Google Analytics tracking for wholesale conversions
- Maintain bilingual support (ES/EN) throughout the flow
- Complete user journey: form → submission → personalized thank you → contact options

--- a/Formsubmit-template.html
+++ b/Formsubmit-template.html
@@ -205,7 +205,7 @@
                     <input type="hidden" name="_subject" value="Nueva Solicitud - Cliente Mayorista Skyplay IPTV">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://skyplay-iptv-latam.vercel.app">
+                    <input type="hidden" name="_next" value="thank-you.html">
                     <input type="hidden" name="_autoresponse" value="¡Gracias por tu interés en ser cliente mayorista de Skyplay IPTV! Nos pondremos en contacto contigo dentro de 24 horas para brindarte acceso a precios especiales y beneficios exclusivos.">
                     <!-- Webhook preparation for future VPS integration -->
                     <input type="hidden" name="_webhook" value="" id="webhookUrl">
