🔧 Eliminar duplicación de métodos de pago - Solo 'Tarjeta de Crédito/Débito'

--- a/index.html
+++ b/index.html
@@ -2918,25 +2918,25 @@
             flujo: {
                 oneTime: {
                     month1: {
-                        card: 'TU_COINPAL_LINK_FLUJO_1M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_FLUJO_1M',
                         binance: 'TU_COINPAL_LINK_FLUJO_1M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_FLUJO_1M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_FLUJO_1M'
                     },
                     months3: {
-                        card: 'TU_COINPAL_LINK_FLUJO_3M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_FLUJO_3M',
                         binance: 'TU_COINPAL_LINK_FLUJO_3M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_FLUJO_3M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_FLUJO_3M'
                     },
                     months6: {
-                        card: 'TU_COINPAL_LINK_FLUJO_6M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_FLUJO_6M',
                         binance: 'TU_COINPAL_LINK_FLUJO_6M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_FLUJO_6M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_FLUJO_6M'
                     },
                     months12: {
-                        card: 'TU_COINPAL_LINK_FLUJO_12M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_FLUJO_12M',
                         binance: 'TU_COINPAL_LINK_FLUJO_12M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_FLUJO_12M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_FLUJO_12M'
@@ -2947,25 +2947,25 @@
             magistv1: {
                 oneTime: {
                     month1: {
-                        card: 'TU_COINPAL_LINK_MAGISTV1_1M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV1_1M',
                         binance: 'TU_COINPAL_LINK_MAGISTV1_1M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV1_1M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV1_1M'
                     },
                     months3: {
-                        card: 'TU_COINPAL_LINK_MAGISTV1_3M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV1_3M',
                         binance: 'TU_COINPAL_LINK_MAGISTV1_3M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV1_3M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV1_3M'
                     },
                     months6: {
-                        card: 'TU_COINPAL_LINK_MAGISTV1_6M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV1_6M',
                         binance: 'TU_COINPAL_LINK_MAGISTV1_6M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV1_6M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV1_6M'
                     },
                     months12: {
-                        card: 'TU_COINPAL_LINK_MAGISTV1_12M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV1_12M',
                         binance: 'TU_COINPAL_LINK_MAGISTV1_12M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV1_12M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV1_12M'
@@ -2982,25 +2982,25 @@
             magistv3: {
                 oneTime: {
                     month1: {
-                        card: 'TU_COINPAL_LINK_MAGISTV3_1M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV3_1M',
                         binance: 'TU_COINPAL_LINK_MAGISTV3_1M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV3_1M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV3_1M'
                     },
                     months3: {
-                        card: 'TU_COINPAL_LINK_MAGISTV3_3M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV3_3M',
                         binance: 'TU_COINPAL_LINK_MAGISTV3_3M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV3_3M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV3_3M'
                     },
                     months6: {
-                        card: 'TU_COINPAL_LINK_MAGISTV3_6M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV3_6M',
                         binance: 'TU_COINPAL_LINK_MAGISTV3_6M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV3_6M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV3_6M'
                     },
                     months12: {
-                        card: 'TU_COINPAL_LINK_MAGISTV3_12M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_MAGISTV3_12M',
                         binance: 'TU_COINPAL_LINK_MAGISTV3_12M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_MAGISTV3_12M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_MAGISTV3_12M'
@@ -3017,25 +3017,25 @@
             telelatino1: {
                 oneTime: {
                     month1: {
-                        card: 'TU_COINPAL_LINK_TELELATINO1_1M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO1_1M',
                         binance: 'TU_COINPAL_LINK_TELELATINO1_1M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO1_1M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO1_1M'
                     },
                     months3: {
-                        card: 'TU_COINPAL_LINK_TELELATINO1_3M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO1_3M',
                         binance: 'TU_COINPAL_LINK_TELELATINO1_3M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO1_3M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO1_3M'
                     },
                     months6: {
-                        card: 'TU_COINPAL_LINK_TELELATINO1_6M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO1_6M',
                         binance: 'TU_COINPAL_LINK_TELELATINO1_6M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO1_6M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO1_6M'
                     },
                     months12: {
-                        card: 'TU_COINPAL_LINK_TELELATINO1_12M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO1_12M',
                         binance: 'TU_COINPAL_LINK_TELELATINO1_12M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO1_12M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO1_12M'
@@ -3052,25 +3052,25 @@
             telelatino3: {
                 oneTime: {
                     month1: {
-                        card: 'TU_COINPAL_LINK_TELELATINO3_1M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO3_1M',
                         binance: 'TU_COINPAL_LINK_TELELATINO3_1M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO3_1M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO3_1M'
                     },
                     months3: {
-                        card: 'TU_COINPAL_LINK_TELELATINO3_3M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO3_3M',
                         binance: 'TU_COINPAL_LINK_TELELATINO3_3M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO3_3M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO3_3M'
                     },
                     months6: {
-                        card: 'TU_COINPAL_LINK_TELELATINO3_6M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO3_6M',
                         binance: 'TU_COINPAL_LINK_TELELATINO3_6M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO3_6M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO3_6M'
                     },
                     months12: {
-                        card: 'TU_COINPAL_LINK_TELELATINO3_12M_TARJETA',
+                        stripe: 'TU_STRIPE_LINK_TELELATINO3_12M',
                         binance: 'TU_COINPAL_LINK_TELELATINO3_12M_BINANCE',
                         paypal: 'TU_COINPAL_LINK_TELELATINO3_12M_PAYPAL',
                         sinpe: 'TU_SINPE_LINK_TELELATINO3_12M'
@@ -3823,14 +3823,13 @@
             let methods = [];
 
             if (selectedPaymentType === 'subscription') {
-                // Only Stripe for subscriptions
+                // Only Credit/Debit Cards for subscriptions (via Stripe)
                 methods = [
-                    {id: 'stripe', name: 'Stripe', desc: translation.modalOnlyStripe, icon: '💳'}
+                    {id: 'stripe', name: translation.paymentCard, desc: translation.paymentCardDesc, icon: '💳'}
                 ];
             } else {
-                // All methods for one-time payments (including Stripe)
+                // All methods for one-time payments
                 methods = [
-                    {id: 'stripe', name: 'Stripe', desc: 'Tarjetas de crédito/débito', icon: '💳'},
                     {id: 'card', name: translation.paymentCard, desc: translation.paymentCardDesc, icon: '💳'},
                     {id: 'binance', name: translation.paymentBinance, desc: translation.paymentBinanceDesc, icon: '₿'},
                     {id: 'paypal', name: translation.paymentPaypal, desc: translation.paymentPaypalDesc, icon: '💰'}
@@ -3893,7 +3892,9 @@
             } else {
                 // One-time payment links
                 if (paymentLinks[planKey] && paymentLinks[planKey].oneTime) {
-                    paymentLink = paymentLinks[planKey].oneTime[durationKey]?.[method];
+                    // Use Stripe links for 'card' method as well
+                    const linkMethod = method === 'card' ? 'stripe' : method;
+                    paymentLink = paymentLinks[planKey].oneTime[durationKey]?.[linkMethod];
                 }
             }
 
