--- a/index.html
+++ b/index.html
@@ -3683,6 +3683,10 @@
 
             // Generate duration options
             generateDurationOptions();
+            
+            // Reset payment methods section when changing payment type
+            document.getElementById('paymentMethodsSection').style.display = 'none';
+            selectedDuration = null;
         }
 
         function goBackToStep1() {
@@ -3692,6 +3696,11 @@
             document.getElementById('step1').style.display = 'block';
             document.getElementById('step2').style.display = 'none';
             document.getElementById('paymentMethodsSection').style.display = 'none';
+            
+            // Clear any selected duration cards
+            document.querySelectorAll('.duration-card').forEach(card => {
+                card.classList.remove('selected');
+            });
         }
 
         function updatePlanInfo() {
