--- a/index.html
+++ b/index.html
@@ -4108,7 +4108,40 @@
                 formSubmitData.append('_subject', 'Nueva Solicitud - Cliente Mayorista Skyplay IPTV (Modal)');
                 formSubmitData.append('_captcha', 'false');
                 formSubmitData.append('_template', 'table');
-                formSubmitData.append('_autoresponse', '¡Gracias por tu interés en ser cliente mayorista de Skyplay IPTV! Nos pondremos en contacto contigo dentro de 24 horas.');
+                formSubmitData.append('_replyto', data.email);  // Email del usuario para autorespuesta
+                formSubmitData.append('_cc', 'abarahonag@barmentech.com'); // Copia para ti
+                formSubmitData.append('_autoresponse', `🏢 ¡Gracias ${data.fullName}!
+
+Hemos recibido tu solicitud para convertirte en Cliente Mayorista de Skyplay IPTV.
+
+📋 DATOS RECIBIDOS:
+• Nombre: ${data.fullName}
+• País: ${data.countryCode}
+• Email: ${data.email}
+
+🎯 PRÓXIMOS PASOS:
+1. ✅ Revisaremos tu solicitud (24-48 horas)
+2. 📞 Te contactaremos vía WhatsApp/Email
+3. 💼 Te explicaremos nuestros planes mayoristas
+4. 🔐 Te daremos acceso al portal exclusivo
+
+💰 BENEFICIOS MAYORISTA:
+• 15-45% descuentos en TODOS los productos
+• Netflix, Disney+, HBO Max, Gaming y más
+• Billetera digital integrada
+• Soporte prioritario 24/7
+• Dashboard personalizado
+
+📞 CONTACTO INMEDIATO:
+¿Tienes preguntas urgentes? Escríbenos:
+WhatsApp: [TU_NUMERO]
+Email: abarahonag@barmentech.com
+
+¡Bienvenido a la familia Skyplay! 🚀
+
+---
+Skyplay IPTV - Tu Partner en Streaming
+https://skyplay-iptv-latam.vercel.app`);
 
                 const response = await fetch('https://formsubmit.co/abarahonag@barmentech.com', {
                     method: 'POST',
