📞 Agregar WhatsApp real y corregir URL a iptv.skyplay.us

--- a/index.html
+++ b/index.html
@@ -4134,14 +4134,15 @@ Hemos recibido tu solicitud para convertirte en Cliente Mayorista de Skyplay IPT
 
 📞 CONTACTO INMEDIATO:
 ¿Tienes preguntas urgentes? Escríbenos:
-WhatsApp: [TU_NUMERO]
+WhatsApp: +1 (786) 391-8722
+Link directo: https://wa.me/17863918722
 Email: abarahonag@barmentech.com
 
 ¡Bienvenido a la familia Skyplay! 🚀
 
 ---
 Skyplay IPTV - Tu Partner en Streaming
-https://skyplay-iptv-latam.vercel.app`);
+https://iptv.skyplay.us`);
 
                 const response = await fetch('https://formsubmit.co/abarahonag@barmentech.com', {
                     method: 'POST',
