--- a/index.html
+++ b/index.html
@@ -2811,7 +2811,7 @@
                                 <option value="+598">🇺🇾 Uruguay (+598)</option>
                                 <option value="+595">🇵🇾 Paraguay (+595)</option>
                                 <option value="+55">🇧🇷 Brasil (+55)</option>
-                                <option value="+34">🇪🇸 España (+34)</option>
+
                             </select>
                         </div>
                         <div class="wholesale-form-group">
@@ -4236,12 +4236,12 @@ https://iptv.skyplay.us`);
                     // 🔧 CONFIGURAR AQUÍ TU WEBHOOK URL
                     const webhookConfig = {
                         enabled: true, // Cambiar a false para deshabilitar
-                        url: 'https://tu-n8n-instance.com/webhook/skyplay-wholesale', // 👈 CAMBIAR ESTA URL
+                        url: 'http://64.23.191.96:5678/webhook/wholesale-skyplay', // 👈 CAMBIAR ESTA URL
                         apiKey: 'tu-api-key-opcional', // Solo si necesitas autenticación
                         timeout: 10000 // 10 segundos timeout
                     };
 
-                    if (webhookConfig.enabled && webhookConfig.url !== 'https://tu-n8n-instance.com/webhook/skyplay-wholesale') {
+                    if (webhookConfig.enabled && webhookConfig.url !== 'http://64.23.191.96:5678/webhook/wholesale-skyplay') {
                         const headers = {
                             'Content-Type': 'application/json',
                             'X-Source': 'skyplay-frontend'
