Fix: expose selectCountry to window after definition for modal country selection

--- a/index.html
+++ b/index.html
@@ -4012,6 +4012,7 @@
             generatePricingCards();
             document.getElementById('countryModal').classList.remove('active');
         }
+        window.selectCountry = selectCountry;
 
         function updateCountryDisplay() {
             const countryData = exchangeRates[currentCountry];
